# magicenv

./: LICENSE  README.md  pyproject.toml  test.py
magicenv/: __init__.py  magicenv.py
tests/: test_magicenv.py
